# proton-cleanup

./: .gitignore  Makefile  README.md  pyproject.toml
.github/agents/: coder.agent.md  release-manager.agent.md
.github/workflows/: ci.yml  release.yml
data/: io.github.protoncleanup.ProtonCleanup.desktop  io.github.protoncleanup.ProtonCleanup.metainfo.xml
flatpak/: io.github.protoncleanup.ProtonCleanup.yaml
flatpak/wheels/: textual-0.70.0-py3-none-any.whl  textual-8.1.1-py3-none-any.whl
scripts/: build-flatpak.sh
src/proton_manager/: __init__.py  __main__.py  cli.py  delete.py  model.py  output.py
src/proton_manager/gui/: __init__.py  app.py  delete_dialog.py  detail_panel.py  game_table.py  main_window.py  tabs.py  workers.py
src/proton_manager/scan/: config.py  libraries.py  orphans.py  proton_tools.py  shortcuts.py  sizes.py  steam_games.py  steam_roots.py
src/proton_manager/tui/: app.py  delete_dialog.py  widgets.py
tests/: conftest.py  test_cli_output.py  test_delete.py  test_delete_dialog.py  test_gui_smoke.py  test_orphans.py  test_scan_mapping.py  test_sizes.py  test_tui_smoke.py
